# windninja2web

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md
.github/workflows/: deploy-hf.yml
.opencode/plans/: improve-ui.md
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/core/: dem_cache.py  export.py  ninja_bridge.py  task_manager.py
backend/app/models/: schemas.py
backend/app/routes/: dem.py  export.py  map.py  meteo.py  simulation.py
backend/lib/: CMakeLists.txt  bindings.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  export.js  sidebar.js  simulation.js  state.js  viewer.js
src/ninja/: KmlVector.cpp  KmlVector.h  OutputWriter.cpp  dust.cpp  ninja.cpp  ninjaArmy.cpp  ninja_version.h  wxModelInitialization.cpp
tests/: conftest.py  test_simulation.py
